# 1040ES_calculator

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  GEMINI.md  README.md  docker-compose-example.yml  pyproject.toml
.github/workflows/: docker-publish.yml
deploy/: 1040es.nginx  1040es.service
src/estimated_tax_calculator/: __init__.py  app.py  calculator.py  models.py  tax_brackets.py
src/estimated_tax_calculator/static/: app.js  style.css
src/estimated_tax_calculator/templates/: index.html
tests/: test_calculator.py
